# FairShare

./: README.md
client/: FireShare.pro  FireShare_zh_CN.ts  downloadwindow.cpp  downloadwindow.h  downloadworker.cpp  downloadworker.h  downloadworkerconnection.cpp  downloadworkerconnection.h  filebitmapview.cpp  filebitmapview.h  fileindex.cpp  fileindex.h  filelistview.cpp  filelistview.h  fileverifyworker.cpp  fileverifyworker.h  functionbar.cpp  functionbar.h  heartbeat.cpp  heartbeat.h  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  navigatorbar.cpp  navigatorbar.h  packet.h  searchtable.cpp  searchtable.h  task.cpp  task.h  taskinfopanel.cpp  taskinfopanel.h  tasklist.cpp  tasklist.h  updatewindow.cpp  updatewindow.h  worker.cpp  worker.h
server/: .env  Cargo.toml
server/migrations/2019-12-31-190839_create_torrents/: down.sql  up.sql
server/migrations/2020-01-03-033908_create_seeder/: down.sql  up.sql
server/src/: common.rs  error.rs  main.rs  schema.rs  seeder.rs  tracker.rs
server/src/model/: mod.rs  seeder.rs  torrent.rs
