[package]
name = "FireShareBackend"
version = "0.1.0"
authors = ["z5661068@gmail.com <z5661068@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.*"
rocket_cors = { version = "0.4.0", default-features = false }
diesel = {version ="1.4.1", features=["mysql", "chrono"]}
dotenv = "0.9.0"
serde = {version = "1.0.*", features=["derive"]}
chrono = "0.4"
base64 = "0.11.0"
tokio = {version = "0.2.*", features=["time", "rt-core", "rt-threaded"]}

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
